make a basic website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-<html></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Steve Coast's Website</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.min.css">
+    <style>
+        body {
+            padding: 2rem;
+        }
+        .logo {
+            max-width: 300px;
+            display: block;
+            margin: 0 auto 2rem;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <img src="image.jpg" alt="GoodSpider, LLC Logo" class="logo">
+        <h1>Welcome to GoodSpider, LLC</h1>
+        <h2>Projects</h2>
+        <ul>
+            <li><a href="https://pploralflashcards.com" target="_blank">PPL Oral Flashcards</a> - Study tool for Private Pilot License oral exam</li>
+        </ul>
+        <h2>Contact</h2>
+        <ul>
+            <li><a href="mailto:steve@stevecoast.com">Email: steve@stevecoast.com</a></li>
+        </ul>
+    </div>
+</body>
+</html>
